tests/fixtures/typeck/assignment_type_mismatch.diag
error: assignment value type mismatch
  --> assignment_type_mismatch.veyl:3:13
   |
  3 |     value = true;
   |             ^^^^
