tests/fixtures/typeck/assignment_type_mismatch.veyl
fn main() {
    let mut value = 1;
    value = true;
}
